hw06/test/zm-putarray-error2.fmj
public int main() {
    int[] a;
    int n = 2;
    a = new int[2];
    putarray(2, a);
    putarray(2, n); // error
    return n;
}
